captcha support * clean list method invalid code * update logger white list
